--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Capivara</title>
+  <link rel="stylesheet" href="style.css"
 <style>
-  p {
-     text-align: center
-  }
+ 
 </style>
 </head>
 <body>
