--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
+  
 <title>Capivara</title>
   <link rel="stylesheet" href="style.css"
 <style>
- 
+ p {
+     text align: center
+    }
 </style>
 </head>
 <body>
-  <h1>Sobre as Capivaras</h1>
+  
+   <h1 style="text-align: center">Sobre as Capivaras</h1>
 
-  <p style="font-size:20px><em>As <strong>Capivaras</strong> são um dos maiores roedores e tendem a ser os animais mais simpáticos da natureza,elas tem uma curiosidade bem legal,
+  <p> style="font-size:20px><em>As <strong>Capivaras</strong> são um dos maiores roedores e tendem a ser os animais mais simpáticos da natureza,elas tem uma curiosidade bem legal,
     que é o fato de elas  conseguirem ficar debaixo da água por mais de 5 minutos e elas são chamadas de Kapyva/mestre das gamas por uma tribo Amazônica.</em></p>
 
-  <p style=""><em>As <strong>Capivaras</strong> medem  entre 100 e 130 centimetros de largura e 50 de altura</strong> e elas costumam pesar entre 30 e 80 dependendo 
+  <p> style=""><em>As <strong>Capivaras</strong> medem  entre 100 e 130 centimetros de largura e 50 de altura</strong> e elas costumam pesar entre 30 e 80 dependendo 
   do sexo,as fêmeas normalmente  são maiores do que os machos.</em></p>
 
   <p><em>Bom,os roedores,eles amam água e precisam dela pra manter a pele úmida e eles são encontrados na América central e na América
