--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   
-   <h1 style="text-align: center">Sobre as Capivaras</h1>
+   <h1 style="text-align: center; background: #CCCCCC">Sobre as Capivaras</h1>
 
   <p> style="font-size:20px><em>As <strong>Capivaras</strong> são um dos maiores roedores e tendem a ser os animais mais simpáticos da natureza,elas tem uma curiosidade bem legal,
     que é o fato de elas  conseguirem ficar debaixo da água por mais de 5 minutos e elas são chamadas de Kapyva/mestre das gamas por uma tribo Amazônica.</em></p>
