--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <p> style="font-size:20px><em>As <strong>Capivaras</strong> são um dos maiores roedores e tendem a ser os animais mais simpáticos da natureza,elas tem uma curiosidade bem legal,
     que é o fato de elas  conseguirem ficar debaixo da água por mais de 5 minutos e elas são chamadas de Kapyva/mestre das gamas por uma tribo Amazônica.</em></p>
 
-  <p> style=""><em>As <strong>Capivaras</strong> medem  entre 100 e 130 centimetros de largura e 50 de altura</strong> e elas costumam pesar entre 30 e 80 dependendo 
+  <p> style=""><em>As <strong>Capivaras medem  entre 100 e 130 centimetros de largura e 50 de altura</strong> e elas costumam pesar entre 30 e 80 dependendo 
   do sexo,as fêmeas normalmente  são maiores do que os machos.</em></p>
 
   <p><em>Bom,os roedores,eles amam água e precisam dela pra manter a pele úmida e eles são encontrados na América central e na América
