--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <title>Capivara</title>
   <link rel="stylesheet" href="style.css"
 </head>
+  
 <body>
+    <img src="banner.jpg">
+  
   
    <h1>Sobre as Capivaras</h1>
 
